i add firt image

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <table style="width: 4px;" border="2" cellpadding="4">
         <tbody>
             <tr>
-                <td>&nbsp;</td>
+                <td>
+                    <image src="https://pics.filmaffinity.com/scary_movie-943532513-large.jpg">;</td>
                 <td>&nbsp;</td>
                 <td>&nbsp;</td>
             </tr>
