--- a/index.html
+++ b/index.html
@@ -12,15 +12,14 @@
     <table style="width: 4px;" border="2" cellpadding="4">
         <tbody>
             <tr>
-                <td>
-                    <image src="https://pics.filmaffinity.com/scary_movie-943532513-large.jpg">;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
+                <td>Images</td>
+                <td>Songs</td>
+                <td>Videos</td>
             </tr>
             <tr>
+                <td><image src=" https://images.app.goo.gl/w8Wu3Gozi9JRx8jG9"></td>
                 <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
+                <td><image src="https://pics.filmaffinity.com/scary_movie-943532513-large.jpg"></td>
             </tr>
             <tr>
                 <td>&nbsp;</td>
