add hight width to imagemovie

--- a/index.html
+++ b/index.html
@@ -17,9 +17,13 @@
                 <td>Videos</td>
             </tr>
             <tr>
-                <td><image src=" https://images.app.goo.gl/w8Wu3Gozi9JRx8jG9"></td>
+                <td>
+                    <image src=" https://images.app.goo.gl/w8Wu3Gozi9JRx8jG9" height="500" width="500">
+                </td>
                 <td>&nbsp;</td>
-                <td><image src="https://pics.filmaffinity.com/scary_movie-943532513-large.jpg"></td>
+                <td>
+                    <image src="https://pics.filmaffinity.com/scary_movie-943532513-large.jpg">
+                </td>
             </tr>
             <tr>
                 <td>&nbsp;</td>
