--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
                 <td>Videos</td>
             </tr>
             <tr>
-                <td><image src=" https://images.app.goo.gl/w8Wu3Gozi9JRx8jG9"></td>
+                <td><image src="https://inglouriousfilmgeeks.files.wordpress.com/2014/05/pic_1393188.jpg"></td>
                 <td>&nbsp;</td>
-                <td><image src="https://pics.filmaffinity.com/scary_movie-943532513-large.jpg"></td>
+                <td></td>
             </tr>
             <tr>
-                <td>&nbsp;</td>
+                <td><image src="https://pics.filmaffinity.com/scary_movie-943532513-large.jpg"></td>
                 <td>&nbsp;</td>
                 <td>&nbsp;</td>
             </tr>
