i add style to texts

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <table style="width: 4px;" border="2" cellpadding="4">
         <tbody>
             <tr>
-                <td>Images</td>
-                <td>Songs</td>
-                <td>Videos</td>
+                <td style="text-align:center"><b>Images </b></td>
+                <td style="text-align:center">Songs style="text-align:center"</td>
+                <td style="text-align:center">Videos </td>
             </tr>
             <tr>
                 <td>
