change height and wight  images

--- a/index.html
+++ b/index.html
@@ -19,22 +19,24 @@
             <tr>
 
                 <td>
-                    <image src="https://inglouriousfilmgeeks.files.wordpress.com/2014/05/pic_1393188.jpg" height="500" wight="500">
+                    <image src="https://inglouriousfilmgeeks.files.wordpress.com/2014/05/pic_1393188.jpg" height="200" wight="200">
                 </td>
                 <td>&nbsp;</td>
                 <td>
-                    
+
                 </td>
             </tr>
             <tr>
                 <td>
-                    <image src="https://pics.filmaffinity.com/scary_movie-943532513-large.jpg" height="500" wight="500">
+                    <image src="https://pics.filmaffinity.com/scary_movie-943532513-large.jpg" height="200" wight="200">
                 </td>
                 <td>&nbsp;</td>
                 <td>&nbsp;</td>
             </tr>
             <tr>
-                <td><image src=" https://images.app.goo.gl/w8Wu3Gozi9JRx8jG9" height="500" width="500"></td>
+                <td>
+                    <image src=" https://images.app.goo.gl/w8Wu3Gozi9JRx8jG9" height="200" width="200">
+                </td>
                 <td>&nbsp;</td>
                 <td>&nbsp;</td>
             </tr>
