i move the audio to second column

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <td>
                     <image src="https://inglouriousfilmgeeks.files.wordpress.com/2014/05/pic_1393188.jpg" height="140" wight="200">
                 </td>
-                <td><iframe src="https://open.spotify.com/embed/track/4LJ1YiFbSjJjtEpWi9MGZ4" width="140" height="200" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe></td>
+                <td>aaa</td>
                 <td>
 
                 </td>
@@ -30,7 +30,7 @@
                 <td>
                     <image src="https://pics.filmaffinity.com/scary_movie-943532513-large.jpg" height="140" wight="200">
                 </td>
-                <td>&nbsp;</td>
+                <td><iframe src="https://open.spotify.com/embed/track/4LJ1YiFbSjJjtEpWi9MGZ4" width="140" height="200" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe></td>
                 <td>&nbsp;</td>
             </tr>
             <tr>
