--- a/index.html
+++ b/index.html
@@ -13,15 +13,17 @@
         <tbody>
             <tr>
                 <td style="text-align:center"><b>Images </b></td>
-                <td style="text-align:center">Songs style="text-align:center"</td>
-                <td style="text-align:center">Videos </td>
+                <td style="text-align:center"><b>Songs</b></td>
+                <td style="text-align:center"><b>Videos</b></td>
             </tr>
             <tr>
 
                 <td>
                     <image src="https://inglouriousfilmgeeks.files.wordpress.com/2014/05/pic_1393188.jpg" height="200" wight="200">
                 </td>
-                <td><iframe src="https://open.spotify.com/embed/track/4LJ1YiFbSjJjtEpWi9MGZ4" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe></td>
+                <td>
+                    <iframe src="https://open.spotify.com/embed/track/4RBYGiqGjt7dcAKxBuv47P" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                </td>
                 <td>
 
                 </td>
@@ -30,12 +32,12 @@
                 <td>
                     <image src="https://pics.filmaffinity.com/scary_movie-943532513-large.jpg" height="200" wight="200">
                 </td>
-                <td>&nbsp;</td>
+                <td><iframe src="https://open.spotify.com/embed/track/4LJ1YiFbSjJjtEpWi9MGZ4" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe></td>
                 <td>&nbsp;</td>
             </tr>
             <tr>
                 <td>
-                    <image src="https://upload.wikimedia.org/wikipedia/en/3/3b/Pulp_Fiction_%281994%29_poster.jpg" height="500" widht="500">
+                    <image src="https://upload.wikimedia.org/wikipedia/en/3/3b/Pulp_Fiction_%281994%29_poster.jpg" height="200" widht="200">
                 </td>
                 <td>&nbsp;</td>
                 <td>&nbsp;</td>
