--- a/index.html
+++ b/index.html
@@ -13,18 +13,15 @@
         <tbody>
             <tr>
                 <td style="text-align:center"><b>Images </b></td>
-                <td style="text-align:center"><b>Songs</b></td>
-                <td style="text-align:center"><b>Videos</b></td>
+                <td style="text-align:center"></td>
+                <td style="text-align:center">Videos </td>
             </tr>
             <tr>
 
                 <td>
                     <image src="https://inglouriousfilmgeeks.files.wordpress.com/2014/05/pic_1393188.jpg" height="240" wight="200">
                 </td>
-                <td>
-                    <iframe src="https://open.spotify.com/embed/track/4RBYGiqGjt7dcAKxBuv47P" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-                </td>
-
+                <td>aaa</td>
                 <td>
 
                 </td>
@@ -33,8 +30,7 @@
                 <td>
                     <image src="https://pics.filmaffinity.com/scary_movie-943532513-large.jpg" height="240" wight="200">
                 </td>
-                <td><iframe src="https://open.spotify.com/embed/track/4LJ1YiFbSjJjtEpWi9MGZ4" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe></td>
-
+                <td><iframe src="https://open.spotify.com/embed/track/4LJ1YiFbSjJjtEpWi9MGZ4" width="240" height="200" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe></td>
                 <td>&nbsp;</td>
             </tr>
             <tr>
