--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
                 <td>
                     <image src="https://pics.filmaffinity.com/scary_movie-943532513-large.jpg" height="240" wight="200">
                 </td>
-                <td><iframe src="https://open.spotify.com/embed/track/4LJ1YiFbSjJjtEpWi9MGZ4" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe></td>
-
+                <td>
+                    <iframe src="https://open.spotify.com/embed/track/4LJ1YiFbSjJjtEpWi9MGZ4" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                </td>
                 <td>&nbsp;</td>
             </tr>
             <tr>
