--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <table style="width: 4px;" border="2" cellpadding="4">
         <tbody>
             <tr>
-                <td style="text-align:center"><b>Images </b></td>
-                <td style="text-align:center"></td>
-                <td style="text-align:center">Videos </td>
+                <td style="text-align:center"><b>Images</b></td>
+                <td style="text-align:center"><b>Sounds</b></td>
+                <td style="text-align:center"><b>Videos</b></td>
             </tr>
             <tr>
 
