--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
                     <image src="https://inglouriousfilmgeeks.files.wordpress.com/2014/05/pic_1393188.jpg" height="240" wight="200">
                 </td>
                 <td><iframe src="https://open.spotify.com/embed/track/4RBYGiqGjt7dcAKxBuv47P" width="240" height="240" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe></td>
-                <td><iframe width="560" height="315" src="https://www.youtube.com/embed/_QyzlRQ7vT4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <td>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/_QyzlRQ7vT4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </td>
             </tr>
             <tr>
@@ -38,8 +39,10 @@
                 <td>
                     <image src="https://upload.wikimedia.org/wikipedia/en/3/3b/Pulp_Fiction_%281994%29_poster.jpg" height="240" widht="200">
                 </td>
-                <td><iframe src="https://open.spotify.com/embed/track/3538ZnMvpmpImrC6rFQgDr" width="240" height="240" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe></td>
-                <td><iframe width="560" height="315" src="https://www.youtube.com/embed/5ZAhzsi1ybM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+                <td>
+                    <iframe src="https://open.spotify.com/embed/track/3538ZnMvpmpImrC6rFQgDr" width="240" height="240" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                </td>
+                <td>&nbsp;</td>
             </tr>
         </tbody>
     </table>
