--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
                 <td>
                     <image src="https://inglouriousfilmgeeks.files.wordpress.com/2014/05/pic_1393188.jpg" height="240" wight="200">
                 </td>
-                <td><iframe src="https://open.spotify.com/embed/track/4RBYGiqGjt7dcAKxBuv47P" width="240" height="240" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe></td>
+                <td>
+                    <iframe src="https://open.spotify.com/embed/track/4RBYGiqGjt7dcAKxBuv47P" width="240" height="240" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                </td>
                 <td>
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/_QyzlRQ7vT4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </td>
@@ -33,7 +35,9 @@
                 <td>
                     <iframe src="https://open.spotify.com/embed/track/4LJ1YiFbSjJjtEpWi9MGZ4" width="240" height="240" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
                 </td>
-                <td><iframe width="560" height="315" src="https://www.youtube.com/embed/HTLPULt0eJ4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+                <td>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/HTLPULt0eJ4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </td>
             </tr>
             <tr>
                 <td>
@@ -42,7 +46,9 @@
                 <td>
                     <iframe src="https://open.spotify.com/embed/track/3538ZnMvpmpImrC6rFQgDr" width="240" height="240" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
                 </td>
-                <td>&nbsp;</td>
+                <td>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/s7EdQ4FqbhY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </td>
             </tr>
         </tbody>
     </table>
