--- a/about.html
+++ b/about.html
@@ -12,8 +12,8 @@
         <img src="code.PNG" alt="" width="100%" height="5%">
         <nav>
             <ul>
-                <li><a href="home.html" class="aktuell">Home</a></li>
-                <li><a href="about.html">About us</a></li>
+                <li><a href="home.html">Home</a></li>
+                <li><a href="about.html" class="aktuell">About us</a></li>
                 <li><a href="contact.html">Contact us</a></li>
             </ul>
         </nav>
