--- a/contact.html
+++ b/contact.html
@@ -12,9 +12,9 @@
         <img src="code.PNG" alt="" width="100%" height="5%">
         <nav>
             <ul>
-                <li><a href="home.html" class="aktuell">Home</a></li>
+                <li><a href="home.html">Home</a></li>
                 <li><a href="about.html">About us</a></li>
-                <li><a href="contact.html">Contact us</a></li>
+                <li><a href="contact.html" class="aktuell">Contact us</a></li>
             </ul>
         </nav>
     </header>
