--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,22 @@
         </nav>
     </header>
     <main>
-        
+        <table  border="20">
+            <tr>
+              <th>Firstname</th>
+              <th>Lastname</th>
+              <th>E-mail</th>
+            </tr>
+            <tr>
+              <td>Richard</td>
+              <td>Kumhofer</td >
+              <td>richardkumhofer@email.com</td>
+            </tr>
+            <tr>
+                <td>Freddy</td>
+                <td>Delgado</td >
+                <td>freddydelgado@email.com</td>
+              </tr>
     </main>
 </body>
 </html>
