--- a/home.html
+++ b/home.html
@@ -19,7 +19,9 @@
         </nav>
     </header>
     <main>
-        
+        <img src="https://www.it-daily.net/images/Aufmacher-2019/Code-Licht-700.png" alt="" width="300" >
+        <p>There will be text soon.</p>
+        <img src="https://www.open.edu/openlearn/ocw/pluginfile.php/1317197/mod_resource/content/0/sc_1_olhp_786px.jpg" alt="" width="300">
     </main>
 </body>
 </html>
