--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1 style="text-align: center;"><b>Coding Center</b></h1>
-        <img src="code.PNG" alt="" width="100%" height="5%">
+        <img src="code.PNG" alt="" width="100%">
         <nav>
             <ul>
                 <li><a href="home.html">Home</a></li>
