--- a/about.html
+++ b/about.html
@@ -19,7 +19,8 @@
         </nav>
     </header>
     <main>
-        
+        <p>You will be redirected to google in 5 seconds.</p>
+        <meta http-equiv="refresh" content="5;url=https://www.google.at/" >
     </main>
 </body>
 </html>
