nex changes in cssBasic1

--- a/cssBasic1.html
+++ b/cssBasic1.html
@@ -7,8 +7,26 @@
     <title>Document</title>
 </head>
 <body>
-    <div>
-        
+    <div class="left" id="first">
+        <div class="left" id="third">
+            <p></p>
+            <span>
+                <h3></h3>
+                <p></p>
+            </span>
+        </div>
+        <div class="left" id="fourth">
+            <h1></h1>
+        </div>
     </div>
+    <div class="right" id="second">
+        <div class="right" id="fifth">
+            <p></p>
+        </div>
+        <div class="right" id="sixth">
+            <img src="" alt="">
+        </div>
+    </div>
+
 </body>
 </html>
