i add the names

--- a/cssBasic1.html
+++ b/cssBasic1.html
@@ -1,32 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    <div class="left" id="first">
+    <div class="left" id="first">Coding Language
         <div class="left" id="third">
-            <p></p>
+            <p>Html, css, Javascript,Sql</p>
             <span>
-                <h3></h3>
-                <p></p>
+                <h3>CSS</h3>
+                <p>Cascading style sheet</p>
             </span>
         </div>
-        <div class="left" id="fourth">
-            <h1></h1>
+        <div class="left" id="fourth">Coding Selectors
+            <h1>Head, p, audio, image, video...</h1>
         </div>
     </div>
-    <div class="right" id="second">
+    <div class="right" id="second">Coding Declarations
         <div class="right" id="fifth">
-            <p></p>
+            <p>Property, Value</p>
         </div>
-        <div class="right" id="sixth">
-            <img src="" alt="">
+        <div class="right" id="sixth">The image<br>
+            <img src="code.PNG" alt="">
         </div>
     </div>
 
 </body>
+
 </html>
