--- a/cssBasic1.html
+++ b/cssBasic1.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="cssBasic1.css">
     <title>Document</title>
 </head>
 
@@ -26,7 +27,7 @@
             <p>Property, Value</p>
         </div>
         <div class="right" id="sixth">The image<br>
-            <img src="code.PNG" alt="">
+            <img src="code.PNG" alt="" id="img">
         </div>
     </div>
 
