add style basicexer.2

--- a/cssBasic1.html
+++ b/cssBasic1.html
@@ -16,10 +16,12 @@
             <span>
                 <h3>CSS</h3>
                 <p>Cascading style sheet</p>
+
             </span>
         </div>
         <div class="left" id="fourth">Coding Selectors
             <h1>Head, p, audio, image, video...</h1>
+            <input type="text" id="input1" value="whrite a selector" />
         </div>
     </div>
     <div class="right" id="second">Coding Declarations
@@ -27,7 +29,8 @@
             <p>Property, Value</p>
         </div>
         <div class="right" id="sixth">The image<br>
-            <img src="code.PNG" alt="" id="img">
+            <img src="code.PNG" alt="" id="img"><br>
+            <input type="text" id="input2" value="description from the image" />
         </div>
     </div>
 
