new changes on newsPaper

--- a/newsPaper.html
+++ b/newsPaper.html
@@ -6,10 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="newsPaper.css">
     <style>
         p {
             text-align: center;
-            background-color: grey;
+            background-color: rgb(202, 200, 200);
             font-style: italic;
         }
     </style>
