--- a/newsPaper.html
+++ b/newsPaper.html
@@ -17,6 +17,15 @@
 </head>
 
 <body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="newsPaper.html" class="aktuell">Home</a></li>
+                <li><a href="https://youtu.be/2NOv3CnoSyY">Video to elefant</a></li>
+                <li><a href="NPContact.html">Contact us</a></li>
+            </ul>
+        </nav>
+    </header>
     <div>
         <h1 style="text-align:center; font-size:2em; color: blue;">Elefantenbaby wurde erlöst - sonst wäre es verhungert</h1>
         <img src="elefant.jpeg" alt="elefant">
