--- a/home.html
+++ b/home.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="home1.css">
 </head>
+
 <body>
     <header>
         <h1 style="text-align: center;"><b>Coding Center</b></h1>
@@ -19,9 +22,10 @@
         </nav>
     </header>
     <main>
-        <img src="https://www.it-daily.net/images/Aufmacher-2019/Code-Licht-700.png" alt="" width="300" >
+        <img src="https://www.it-daily.net/images/Aufmacher-2019/Code-Licht-700.png" alt="" width="300">
         <p>There will be text soon.</p>
         <img src="https://www.open.edu/openlearn/ocw/pluginfile.php/1317197/mod_resource/content/0/sc_1_olhp_786px.jpg" alt="" width="300">
     </main>
 </body>
+
 </html>
